--- a/.weechat/buffers.conf
+++ b/.weechat/buffers.conf
@@ -1,42 +1,42 @@
 #
-# buffers.conf -- weechat v0.3.8
+# buffers.conf -- weechat v0.4.3
 #
 
 [color]
 current_bg = default
-current_fg = black
+current_fg = white
 default_bg = default
-default_fg = gray
+default_fg = black
 hotlist_highlight_bg = default
-hotlist_highlight_fg = lightcyan
+hotlist_highlight_fg = lightred
 hotlist_low_bg = default
-hotlist_low_fg = gray
+hotlist_low_fg = default
 hotlist_message_bg = default
-hotlist_message_fg = gray
+hotlist_message_fg = black
 hotlist_private_bg = default
-hotlist_private_fg = gray
+hotlist_private_fg = lightred
 none_channel_bg = default
-none_channel_fg = gray
+none_channel_fg = white
 number = darkgray
 number_char = red
 prefix_bufname = default
 queries_default_bg = default
-queries_default_fg = gray
+queries_default_fg = black
 queries_highlight_bg = default
-queries_highlight_fg = white
+queries_highlight_fg = red
 queries_message_bg = default
-queries_message_fg = gray
+queries_message_fg = red
 suffix_bufname = default
 whitelist_default_bg = default
-whitelist_default_fg = gray
+whitelist_default_fg = black
 whitelist_highlight_bg = default
-whitelist_highlight_fg = white
+whitelist_highlight_fg = blue
 whitelist_low_bg = default
-whitelist_low_fg = gray
+whitelist_low_fg = default
 whitelist_message_bg = default
-whitelist_message_fg = gray
+whitelist_message_fg = cyan
 whitelist_private_bg = default
-whitelist_private_fg = gray
+whitelist_private_fg = red
 
 [look]
 core_to_front = on
