--- a/.weechat/weechat.conf
+++ b/.weechat/weechat.conf
@@ -1,5 +1,5 @@
 #
-# weechat.conf -- weechat v0.3.8
+# weechat.conf -- weechat v0.4.3
 #
 
 [debug]
@@ -9,6 +9,7 @@ command_after_plugins = ""
 command_before_plugins = ""
 display_logo = on
 display_version = on
+sys_rlimit = ""
 
 [look]
 align_end_of_lines = message
@@ -16,7 +17,13 @@ bar_more_down = "++"
 bar_more_left = "<<"
 bar_more_right = ">>"
 bar_more_up = "--"
+buffer_auto_renumber = on
 buffer_notify_default = all
+buffer_position = end
+buffer_search_case_sensitive = off
+buffer_search_force_default = off
+buffer_search_regex = off
+buffer_search_where = message
 buffer_time_format = "%H:%M"
 color_basic_force_bold = off
 color_inactive_buffer = off
@@ -25,13 +32,16 @@ color_inactive_prefix = on
 color_inactive_prefix_buffer = on
 color_inactive_time = off
 color_inactive_window = off
+color_nick_offline = off
 color_pairs_auto_reset = 5
 color_real_white = on
 command_chars = ""
 confirm_quit = off
 day_change = on
-day_change_time_format = "%a, %d %b %Y"
+day_change_message_1date = "-- %a, %d %b %Y --"
+day_change_message_2dates = "-- %%a, %%d %%b %%Y (%a, %d %b %Y) --"
 eat_newline_glitch = off
+emphasized_attributes = ""
 highlight = ""
 highlight_regex = ""
 highlight_tags = ""
@@ -43,21 +53,26 @@ hotlist_names_count = 3
 hotlist_names_length = 0
 hotlist_names_level = 12
 hotlist_names_merged_buffers = off
+hotlist_prefix = "H: "
 hotlist_short_names = on
 hotlist_sort = group_time_asc
+hotlist_suffix = ""
 hotlist_unique_numbers = on
 input_cursor_scroll = 20
 input_share = none
 input_share_overwrite = off
 input_undo_max = 32
 item_buffer_filter = "*"
+item_buffer_zoom = "!"
 item_time_format = "%H:%M"
 jump_current_to_previous_buffer = on
 jump_previous_buffer_when_closing = on
+jump_smart_back_to_buffer = on
+key_bind_safe = on
 mouse = off
 mouse_timer_delay = 100
-nickmode = on
-nickmode_empty = off
+nick_prefix = ""
+nick_suffix = ""
 paste_bracketed = on
 paste_bracketed_timer_delay = 10
 paste_max_lines = 1
@@ -66,14 +81,16 @@ prefix_align = right
 prefix_align_max = 100
 prefix_align_min = 0
 prefix_align_more = "+"
+prefix_align_more_after = on
 prefix_buffer_align = right
 prefix_buffer_align_max = 0
 prefix_buffer_align_more = "+"
+prefix_buffer_align_more_after = on
 prefix_error = "=!="
 prefix_join = "◥"
 prefix_network = "--"
 prefix_quit = "◣"
-prefix_same_nick = ""
+prefix_same_nick = "»"
 prefix_suffix = "│"
 read_marker = none
 read_marker_always_show = off
@@ -86,8 +103,12 @@ scroll_page_percent = 75
 search_text_not_found_alert = on
 separator_horizontal = "-"
 separator_vertical = "|"
-set_title = on
+tab_width = 1
 time_format = "%a, %d %b %Y %T"
+window_auto_zoom = off
+window_separator_horizontal = on
+window_separator_vertical = on
+window_title = "irc"
 
 [palette]
 
@@ -97,16 +118,22 @@ chat = default
 chat_bg = default
 chat_buffer = lightcyan
 chat_channel = cyan
+chat_day_change = cyan
 chat_delimiters = lightgreen
 chat_highlight = lightcyan
 chat_highlight_bg = default
 chat_host = cyan
 chat_inactive_buffer = darkgray
 chat_inactive_window = darkgray
-chat_nick = lightcyan
+chat_nick = blue
 chat_nick_colors = "default"
+chat_nick_offline = default
+chat_nick_offline_highlight = default
+chat_nick_offline_highlight_bg = blue
 chat_nick_other = default
-chat_nick_self = black
+chat_nick_prefix = green
+chat_nick_self = blue
+chat_nick_suffix = green
 chat_prefix_action = cyan
 chat_prefix_buffer = brown
 chat_prefix_buffer_inactive_buffer = white
@@ -115,22 +142,24 @@ chat_prefix_join = black
 chat_prefix_more = lightmagenta
 chat_prefix_network = magenta
 chat_prefix_quit = black
-chat_prefix_suffix = gray
+chat_prefix_suffix = black
 chat_read_marker = magenta
 chat_read_marker_bg = default
 chat_server = brown
 chat_tags = red
 chat_text_found = yellow
 chat_text_found_bg = lightmagenta
-chat_time = gray
-chat_time_delimiters = gray
+chat_time = darkgray
+chat_time_delimiters = darkgray
 chat_value = cyan
+emphasized = yellow
+emphasized_bg = magenta
 input_actions = lightcyan
 input_text_not_found = red
 nicklist_away = lightred
 nicklist_group = green
 nicklist_offline = blue
-separator = lightblue
+separator = blue
 status_count_highlight = magenta
 status_count_msg = brown
 status_count_other = default
@@ -172,6 +201,7 @@ max_visited_buffers = 50
 connection_timeout = 60
 gnutls_ca_file = "/etc/ssl/certs/ca-certificates.crt"
 gnutls_handshake_timeout = 30
+proxy_curl = ""
 
 [plugin]
 autoload = "*"
@@ -201,16 +231,16 @@ buffers.color_fg = default
 buffers.conditions = ""
 buffers.filling_left_right = vertical
 buffers.filling_top_bottom = horizontal
-buffers.hidden = on
+buffers.hidden = off
 buffers.items = "buffers"
-buffers.position = left
+buffers.position = top
 buffers.priority = 0
 buffers.separator = on
 buffers.size = 0
 buffers.size_max = 0
 buffers.type = root
 input.color_bg = default
-input.color_delim = lightgreen
+input.color_delim = black
 input.color_fg = black
 input.conditions = ""
 input.filling_left_right = vertical
