--- a/.weechat/irc.conf
+++ b/.weechat/irc.conf
@@ -202,7 +202,7 @@ mutracker.nicks
 mutracker.username
 mutracker.realname
 mutracker.local_hostname
-mutracker.command = "/msg NickServ IDENTIFY jbcjstd2012"
+mutracker.command = "/msg NickServ IDENTIFY"
 mutracker.command_delay
 mutracker.autojoin = "#mutracker"
 mutracker.autorejoin
@@ -238,7 +238,7 @@ rizon.nicks = "nanima,nani,nitanima"
 rizon.username
 rizon.realname
 rizon.local_hostname
-rizon.command = "/msg nickserv identify jbcjstd2012"
+rizon.command = "/msg nickserv identify"
 rizon.command_delay
 rizon.autojoin = "#/mu/radio,#defect"
 rizon.autorejoin
@@ -274,7 +274,7 @@ rizon.notify
 /g/.username
 /g/.realname
 /g/.local_hostname
-/g/.command = "/msg Nickserv identify jbcjstd2012"
+/g/.command = "/msg Nickserv identify"
 /g/.command_delay
 /g/.autojoin = "#installgentoo"
 /g/.autorejoin
