Separated themes into subfolders. Updated to prepare for reinstall

--- a/bauhaus/.ncmpcpp/config
+++ b/bauhaus/.ncmpcpp/config
@@ -23,18 +23,18 @@ display_volume_level = "yes"
 song_list_format = "{%a ⋅ }%t $R {%b ⋅ }%l$9"
 song_status_format = "{%a - %t} on %b"
 #song_columns_list_format = "(8){l} (28){a} (28){b} (50){t}"
-now_playing_prefix = "$8"
+now_playing_prefix = "$7"
 now_playing_suffix = "$9"
-selected_item_prefix ="$8"
+selected_item_prefix ="$7"
 selected_item_suffix ="$9"
 
 #Colors
 colors_enabled = "yes"
 color1 = "white"
-color2 = "black"
-main_window_color = "black"
-main_window_highlight_color = "black"
-active_column_color = "white"
-progressbar_color = "black"
-progressbar_elapsed_color = "black"
+color2 = "white"
+main_window_color = "default"
+main_window_highlight_color = "cyan"
+active_column_color = "default"
+progressbar_color = "default"
+progressbar_elapsed_color = "default"
 discard_colors_if_item_is_selected = "no" 
