--- a/bauhaus/.tmux.conf
+++ b/bauhaus/.tmux.conf
@@ -9,6 +9,6 @@ set -g status-justify left
 
 set -g status-left '#S >>'
 set -g window-status-format "#W"
-set -g window-status-current-format "#[fg=#000000]#W"
+set -g window-status-current-format "#[fg=#fafafa]#W"
 
 set -g status-right ''
