--- a/bauhaus/.weechat/weechat.conf
+++ b/bauhaus/.weechat/weechat.conf
@@ -1,5 +1,5 @@
 #
-# weechat.conf -- weechat v1.0.1
+# weechat.conf -- weechat v1.1.1
 #
 
 [debug]
@@ -38,6 +38,7 @@ color_nick_offline = off
 color_pairs_auto_reset = 5
 color_real_white = on
 command_chars = ""
+command_incomplete = off
 confirm_quit = off
 day_change = on
 day_change_message_1date = "-- %a, %d %b %Y --"
@@ -67,6 +68,7 @@ input_share_overwrite = off
 input_undo_max = 32
 item_buffer_filter = "*"
 item_buffer_zoom = "!"
+item_mouse_status = "M"
 item_time_format = "%H:%M"
 jump_current_to_previous_buffer = on
 jump_previous_buffer_when_closing = on
@@ -123,25 +125,25 @@ chat_buffer = lightcyan
 chat_channel = cyan
 chat_day_change = cyan
 chat_delimiters = lightgreen
-chat_highlight = lightcyan
+chat_highlight = lightmagenta
 chat_highlight_bg = default
 chat_host = cyan
 chat_inactive_buffer = darkgray
 chat_inactive_window = darkgray
-chat_nick = blue
+chat_nick = lightmagenta
 chat_nick_colors = "default"
 chat_nick_offline = default
 chat_nick_offline_highlight = default
 chat_nick_offline_highlight_bg = blue
 chat_nick_other = default
 chat_nick_prefix = green
-chat_nick_self = blue
+chat_nick_self = magenta
 chat_nick_suffix = green
 chat_prefix_action = cyan
 chat_prefix_buffer = brown
 chat_prefix_buffer_inactive_buffer = white
 chat_prefix_error = yellow
-chat_prefix_join = black
+chat_prefix_join = green
 chat_prefix_more = lightmagenta
 chat_prefix_network = magenta
 chat_prefix_quit = black
@@ -173,6 +175,7 @@ status_data_other = default
 status_data_private = lightgreen
 status_filter = green
 status_more = lightcyan
+status_mouse = green
 status_name = white
 status_name_ssl = lightgreen
 status_nicklist_count = default
@@ -181,6 +184,7 @@ status_time = default
 
 [completion]
 base_word_until_cursor = on
+command_inline = on
 default_template = "%(nicks)|%(irc_channels)"
 nick_add_space = on
 nick_completer = ":"
@@ -244,8 +248,8 @@ buffers.size = 0
 buffers.size_max = 0
 buffers.type = root
 input.color_bg = default
-input.color_delim = black
-input.color_fg = black
+input.color_delim = default
+input.color_fg = default
 input.conditions = ""
 input.filling_left_right = vertical
 input.filling_top_bottom = horizontal
@@ -287,7 +291,17 @@ urlbar.size_max = 0
 urlbar.type = root
 
 [layout]
-_zoom.window = "1;0;0;0;irc;/g/.#installgentoo"
+default.buffer = "core;weechat;1"
+default.buffer = "irc;server.ig;2"
+default.buffer = "irc;server.rizon;3"
+default.buffer = "irc;ig.#installgentoo;4"
+default.buffer = "irc;ig.#bananabox;5"
+default.buffer = "irc;rizon.#/mu/radio;6"
+default.buffer = "irc;rizon.#defect;7"
+default.buffer = "irc;rizon.#rice;8"
+default.buffer = "irc;rizon.#weebteam;9"
+default.window = "1;0;0;0;irc;rizon.#defect"
+default.current = on
 
 [notify]
 
