--- a/bauhaus/.weechat/irc.conf
+++ b/bauhaus/.weechat/irc.conf
@@ -1,8 +1,10 @@
 #
-# irc.conf -- weechat v1.0.1
+# irc.conf -- weechat v1.1.1
 #
 
 [look]
+buffer_open_before_autojoin = on
+buffer_open_before_join = off
 buffer_switch_autojoin = on
 buffer_switch_join = on
 color_nicks_in_names = off
@@ -58,6 +60,7 @@ smart_filter_join_unmask = 30
 smart_filter_mode = "ovh"
 smart_filter_nick = on
 smart_filter_quit = on
+temporary_servers = off
 topic_strip_colors = off
 
 [color]
@@ -101,14 +104,13 @@ version = "Fuck you (Weechat)"
 [ignore]
 ignore = *;*;^Ascii$
 ignore = *;*;^kailasha$
-ignore = *;*;^kai$
-ignore = *;*;^dell$
 ignore = *;*;^TechEmporium$
+ignore = *;*;^brawls$
 
 [server_default]
 addresses = ""
-anti_flood_prio_high = 2
-anti_flood_prio_low = 2
+anti_flood_prio_high = 0
+anti_flood_prio_low = 0
 autoconnect = off
 autojoin = ""
 autoreconnect = on
@@ -131,6 +133,7 @@ notify = ""
 password = ""
 proxy = ""
 realname = ""
+sasl_fail = continue
 sasl_mechanism = plain
 sasl_password = ""
 sasl_timeout = 15
@@ -144,103 +147,69 @@ ssl_verify = on
 username = "nani"
 
 [server]
-freenode.addresses = "chat.freenode.net/6667"
-freenode.proxy
-freenode.ipv6
-freenode.ssl
-freenode.ssl_cert
-freenode.ssl_priorities
-freenode.ssl_dhkey_size
-freenode.ssl_fingerprint
-freenode.ssl_verify
-freenode.password
-freenode.capabilities
-freenode.sasl_mechanism
-freenode.sasl_username
-freenode.sasl_password
-freenode.sasl_timeout
-freenode.autoconnect
-freenode.autoreconnect
-freenode.autoreconnect_delay
-freenode.nicks
-freenode.username
-freenode.realname
-freenode.local_hostname
-freenode.command
-freenode.command_delay
-freenode.autojoin
-freenode.autorejoin
-freenode.autorejoin_delay
-freenode.connection_timeout
-freenode.anti_flood_prio_high
-freenode.anti_flood_prio_low
-freenode.away_check
-freenode.away_check_max_nicks
-freenode.default_msg_kick
-freenode.default_msg_part
-freenode.default_msg_quit
-freenode.notify
-mutracker.addresses = "irc.mutracker.org"
-mutracker.proxy
-mutracker.ipv6
-mutracker.ssl
-mutracker.ssl_cert
-mutracker.ssl_priorities
-mutracker.ssl_dhkey_size
-mutracker.ssl_fingerprint
-mutracker.ssl_verify
-mutracker.password
-mutracker.capabilities
-mutracker.sasl_mechanism
-mutracker.sasl_username
-mutracker.sasl_password
-mutracker.sasl_timeout
-mutracker.autoconnect
-mutracker.autoreconnect
-mutracker.autoreconnect_delay
-mutracker.nicks
-mutracker.username
-mutracker.realname
-mutracker.local_hostname
-mutracker.command = "/msg NickServ IDENTIFY"
-mutracker.command_delay
-mutracker.autojoin = "#mutracker"
-mutracker.autorejoin
-mutracker.autorejoin_delay
-mutracker.connection_timeout
-mutracker.anti_flood_prio_high
-mutracker.anti_flood_prio_low
-mutracker.away_check
-mutracker.away_check_max_nicks
-mutracker.default_msg_kick
-mutracker.default_msg_part
-mutracker.default_msg_quit
-mutracker.notify
-rizon.addresses = "irc.rizon.net"
+ig.addresses = "nani.bananabo.xyz/+60649"
+ig.proxy
+ig.ipv6
+ig.ssl = on
+ig.ssl_cert
+ig.ssl_priorities
+ig.ssl_dhkey_size
+ig.ssl_fingerprint
+ig.ssl_verify = off
+ig.password = ""
+ig.capabilities
+ig.sasl_mechanism
+ig.sasl_username
+ig.sasl_password
+ig.sasl_timeout
+ig.sasl_fail
+ig.autoconnect = on
+ig.autoreconnect
+ig.autoreconnect_delay
+ig.nicks
+ig.username = "nani/ig"
+ig.realname
+ig.local_hostname
+ig.command
+ig.command_delay
+ig.autojoin
+ig.autorejoin
+ig.autorejoin_delay
+ig.connection_timeout
+ig.anti_flood_prio_high
+ig.anti_flood_prio_low
+ig.away_check
+ig.away_check_max_nicks
+ig.default_msg_kick
+ig.default_msg_part
+ig.default_msg_quit
+ig.notify
+rizon.addresses = "nani.bananabo.xyz/+60649"
 rizon.proxy
 rizon.ipv6
-rizon.ssl
+rizon.ssl = on
 rizon.ssl_cert
 rizon.ssl_priorities
 rizon.ssl_dhkey_size
 rizon.ssl_fingerprint
-rizon.ssl_verify
-rizon.password
+rizon.ssl_verify = off
+rizon.password = ""
 rizon.capabilities
 rizon.sasl_mechanism
 rizon.sasl_username
 rizon.sasl_password
 rizon.sasl_timeout
+rizon.sasl_fail
 rizon.autoconnect = on
 rizon.autoreconnect
 rizon.autoreconnect_delay
 rizon.nicks = "nanima,nani,nitanima"
-rizon.username
+rizon.username = "nani/rizon"
 rizon.realname
 rizon.local_hostname
-rizon.command = "/msg nickserv identify"
+rizon.command
 rizon.command_delay
-rizon.autojoin = "#/mu/radio,#defect"
+rizon.autojoin
 rizon.autorejoin
 rizon.autorejoin_delay
 rizon.connection_timeout
@@ -252,39 +221,3 @@ rizon.default_msg_kick
 rizon.default_msg_part
 rizon.default_msg_quit
 rizon.notify
-/g/.addresses = "irc.installgentoo.com"
-/g/.proxy
-/g/.ipv6
-/g/.ssl
-/g/.ssl_cert
-/g/.ssl_priorities
-/g/.ssl_dhkey_size
-/g/.ssl_fingerprint
-/g/.ssl_verify
-/g/.password
-/g/.capabilities
-/g/.sasl_mechanism
-/g/.sasl_username
-/g/.sasl_password
-/g/.sasl_timeout
-/g/.autoconnect = on
-/g/.autoreconnect
-/g/.autoreconnect_delay
-/g/.nicks
-/g/.username
-/g/.realname
-/g/.local_hostname
-/g/.command = "/msg Nickserv identify"
-/g/.command_delay
-/g/.autojoin = "#installgentoo"
-/g/.autorejoin
-/g/.autorejoin_delay
-/g/.connection_timeout
-/g/.anti_flood_prio_high
-/g/.anti_flood_prio_low
-/g/.away_check
-/g/.away_check_max_nicks
-/g/.default_msg_kick
-/g/.default_msg_part
-/g/.default_msg_quit
-/g/.notify
