Updated weechat, factored out scripts

--- a/weechat/alias.conf
+++ b/weechat/alias.conf
@@ -1,5 +1,5 @@
 #
-# alias.conf -- weechat v1.1.1
+# weechat -- alias.conf
 #
 
 [cmd]
@@ -11,10 +11,8 @@ BYE = "quit"
 C = "buffer clear"
 CHAT = "dcc chat"
 CL = "buffer clear"
-class = "allserv -exclude=rizon nick nani|class; allserv -exclude=/g/,mutracker nick nanima|class"
 CLOSE = "buffer close"
 EXIT = "quit"
-home = "allserv -exclude=rizon nick nani; allserv -exclude=/g/,mutracker nick nanima"
 hs = "/msg hostserv"
 IG = "ignore"
 J = "join"
