--- a/weechat/weechat.fira.conf
+++ b/weechat/weechat.fira.conf
@@ -1,5 +1,5 @@
 #
-# weechat.conf -- weechat v1.1.1
+# weechat -- weechat.conf
 #
 
 [debug]
@@ -40,6 +40,7 @@ color_real_white = on
 command_chars = ""
 command_incomplete = off
 confirm_quit = off
+confirm_upgrade = off
 day_change = on
 day_change_message_1date = "-- %a, %d %b %Y --"
 day_change_message_2dates = "-- %%a, %%d %%b %%Y (%a, %d %b %Y) --"
@@ -74,6 +75,7 @@ jump_current_to_previous_buffer = on
 jump_previous_buffer_when_closing = on
 jump_smart_back_to_buffer = on
 key_bind_safe = on
+key_grab_delay = 800
 mouse = off
 mouse_timer_delay = 100
 nick_prefix = ""
@@ -97,6 +99,9 @@ prefix_network = "--"
 prefix_quit = "◣"
 prefix_same_nick = "»"
 prefix_suffix = "¦"
+quote_nick_prefix = "<"
+quote_nick_suffix = ">"
+quote_time_format = "%H:%M:%S"
 read_marker = none
 read_marker_always_show = off
 read_marker_string = "─"
@@ -114,6 +119,8 @@ window_auto_zoom = off
 window_separator_horizontal = on
 window_separator_vertical = on
 window_title = "irc"
+word_chars_highlight = "!\u00A0,-,_,|,alnum"
+word_chars_input = "!\u00A0,-,_,|,alnum"
 
 [palette]
 
@@ -297,11 +304,12 @@ default.buffer = "irc;server.rizon;3"
 default.buffer = "irc;ig.#installgentoo;4"
 default.buffer = "irc;ig.#bananabox;5"
 default.buffer = "irc;rizon.#/mu/radio;6"
-default.buffer = "irc;rizon.#defect;7"
+default.buffer = "irc;rizon.#effay;7"
 default.buffer = "irc;rizon.#rice;8"
-default.buffer = "irc;rizon.#weebteam;9"
-default.window = "1;0;0;0;irc;rizon.#defect"
+default.buffer = "irc;ig.#ayytrader;9"
+default.window = "1;0;0;0;core;weechat"
 default.current = on
+_zoom.window = "1;0;0;0;irc;ig.#ayytrader"
 
 [notify]
 
