Added haas theme

--- a/weechat/irc.conf
+++ b/weechat/irc.conf
@@ -1,6 +1,13 @@
 #
 # weechat -- irc.conf
 #
+# WARNING: It is NOT recommended to edit this file by hand,
+# especially if WeeChat is running.
+#
+# Use /set or similar command to change settings in WeeChat.
+#
+# For more info, see: https://weechat.org/doc/quickstart
+#
 
 [look]
 buffer_open_before_autojoin = on
@@ -27,7 +34,6 @@ highlight_channel = "$nick"
 highlight_pv = "$nick"
 highlight_server = "$nick"
 highlight_tags_restrict = "irc_privmsg,irc_notice"
-item_away_message = on
 item_channel_modes_hide_args = "k"
 item_display_server = buffer_plugin
 item_nick_modes = on
@@ -36,9 +42,6 @@ join_auto_add_chantype = off
 msgbuffer_fallback = current
 new_channel_position = none
 new_pv_position = none
-nick_color_force = ""
-nick_color_hash = sum
-nick_color_stop_chars = "_|["
 nick_completion_smart = speakers
 nick_mode = prefix
 nick_mode_empty = off
@@ -65,7 +68,6 @@ topic_strip_colors = off
 
 [color]
 input_nick = default
-item_away = lightred
 item_channel_modes = default
 item_lag_counting = red
 item_lag_finished = lightred
@@ -81,7 +83,6 @@ topic_new = 4
 topic_old = darkgray
 
 [network]
-alternate_nick = on
 autoreconnect_delay_growing = 2
 autoreconnect_delay_max = 1800
 ban_mask_default = "*!$user@$host"
@@ -95,6 +96,7 @@ lag_reconnect = 0
 lag_refresh_interval = 1
 notify_check_ison = 1
 notify_check_whois = 5
+sasl_fail_unavailable = on
 send_unknown_commands = off
 whois_double_nick = on
 
@@ -104,10 +106,7 @@ whois_double_nick = on
 version = "Fuck you (Weechat)"
 
 [ignore]
-ignore = *;*;^TechEmporium$
-ignore = *;*;^brawls$
-ignore = *;*;^nevzets@gen2-4A0AE24A\.speed\.planet\.nl$
-ignore = *;*;^.*!.*@Kamen\.Rider\.1$
+ignore = *;*;^rootb$
 
 [server_default]
 addresses = ""
@@ -125,12 +124,13 @@ capabilities = ""
 command = ""
 command_delay = 0
 connection_timeout = 60
-default_msg_kick = ""
-default_msg_part = "what the fuck are you even doing"
-default_msg_quit = "im a fucking ghost boys"
 ipv6 = off
 local_hostname = ""
+msg_kick = ""
+msg_part = "WeeChat ${info:version}"
+msg_quit = "WeeChat ${info:version}"
 nicks = "nani,nanima,nitanima"
+nicks_alternate = on
 notify = ""
 password = ""
 proxy = ""
@@ -147,10 +147,11 @@ ssl_dhkey_size = 2048
 ssl_fingerprint = ""
 ssl_priorities = "NORMAL"
 ssl_verify = on
+usermode = ""
 username = "nani"
 
 [server]
-ig.addresses = "znc.lol/+36667"
+ig.addresses = ""
 ig.proxy
 ig.ipv6
 ig.ssl
@@ -171,9 +172,11 @@ ig.autoconnect = on
 ig.autoreconnect
 ig.autoreconnect_delay
 ig.nicks
+ig.nicks_alternate
 ig.username = "nani/ig"
 ig.realname
 ig.local_hostname
+ig.usermode
 ig.command
 ig.command_delay
 ig.autojoin
@@ -184,11 +187,11 @@ ig.anti_flood_prio_high
 ig.anti_flood_prio_low
 ig.away_check
 ig.away_check_max_nicks
-ig.default_msg_kick
-ig.default_msg_part
-ig.default_msg_quit
+ig.msg_kick
+ig.msg_part
+ig.msg_quit
 ig.notify
-rizon.addresses = "znc.lol/+36667"
+rizon.addresses = ""
 rizon.proxy
 rizon.ipv6
 rizon.ssl
@@ -209,9 +212,11 @@ rizon.autoconnect = on
 rizon.autoreconnect
 rizon.autoreconnect_delay
 rizon.nicks = "nanima,nani,nitanima"
+rizon.nicks_alternate
 rizon.username = "nani/rizon"
 rizon.realname
 rizon.local_hostname
+rizon.usermode
 rizon.command
 rizon.command_delay
 rizon.autojoin
@@ -222,7 +227,7 @@ rizon.anti_flood_prio_high
 rizon.anti_flood_prio_low
 rizon.away_check
 rizon.away_check_max_nicks
-rizon.default_msg_kick
-rizon.default_msg_part
-rizon.default_msg_quit
+rizon.msg_kick
+rizon.msg_part
+rizon.msg_quit
 rizon.notify
